--- a/Test_Dataset.ipynb
+++ b/Test_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "1  0000247867823ef7  == From RfC == \\n\\n The title is fine as it is..."
       ]
      },
-     "execution_count": 195,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +175,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    # 若不想自定义继承自Dataset的类MyDataset，也可直接使用torchtext.data.Dataset来构建数据集\n",
+    "    # 完整示例如下\n",
+    "    def get_dataset(csv_data, text_field, label_field, test=False):\n",
+    "\n",
+    "        fields = [(\"id\", None), # we won't be needing the id, so we pass in None as the field\n",
+    "                     (\"comment_text\", text_field), (\"toxic\", label_field)]       \n",
+    "        examples = []\n",
+    "\n",
+    "        if test:\n",
+    "            # 如果为测试集，则不加载label\n",
+    "            for text in tqdm(csv_data['comment_text']):\n",
+    "                examples.append(data.Example.fromlist([None, text, None], fields))\n",
+    "        else:\n",
+    "            for text, label in tqdm(zip(csv_data['comment_text'], csv_data['toxic'])):\n",
+    "                examples.append(data.Example.fromlist([None, text, label], fields))\n",
+    "        return examples, fields\n",
+    "\n",
+    "    train_data = pd.read_csv('data/train_one_label.csv')\n",
+    "    valid_data = pd.read_csv('data/valid_one_label.csv')\n",
+    "    test_data = pd.read_csv(\"data/test.csv\")\n",
+    "    TEXT = data.Field(sequential=True, tokenize=tokenize, lower=True)\n",
+    "    LABEL = data.Field(sequential=False, use_vocab=False)\n",
+    "\n",
+    "    # 得到构建Dataset所需的examples和fields\n",
+    "    train_examples, train_fields = get_dataset(train_data, TEXT, LABEL)\n",
+    "    valid_examples, valid_fields = get_dataset(valid_data, TEXT, LABEL)\n",
+    "    test_examples, test_fields = get_dataset(test_data, TEXT, None, test=True)\n",
+    "    # 构建Dataset数据集\n",
+    "    train = data.Dataset(train_examples, train_fields)\n",
+    "    valid = data.Dataset(valid_examples, valid_fields)\n",
+    "    test = data.Dataset(test_examples, test_fields)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 自定义Dataset类"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,48 +281,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "    # 若不想自定义继承自Dataset的类MyDataset，也可直接使用torchtext.data.Dataset来构建数据集\n",
-    "    # 完整示例如下\n",
-    "    train_examples = []\n",
-    "    test_examples = []\n",
-    "    TEXT = data.Field(sequential=True, tokenize=tokenize, lower=True)\n",
-    "    LABEL = data.Field(sequential=False, use_vocab=False)\n",
-    "    train_fields = [(\"id\", None), # we won't be needing the id, so we pass in None as the field\n",
-    "                     (\"comment_text\", TEXT), (\"toxic\", LABEL)]\n",
-    "    test_fileds= [(\"id\", None), # we won't be needing the id, so we pass in None as the field\n",
-    "                     (\"comment_text\", TEXT), (\"toxic\", None)]\n",
-    "    train_data = pd.read_csv('data/train_one_label.csv')\n",
-    "    test_data = pd.read_csv(\"data/test.csv\")\n",
-    "    for text in tqdm(train_data['comment_text']):\n",
-    "        train_examples.append(data.Example.fromlist([None, text, None], train_fields))\n",
-    "    for text in tqdm(test_data['comment_text']):\n",
-    "        test_examples.append(data.Example.fromlist([None, text, None], test_fields))\n",
-    "    # 直接使用Dataset来构造数据集\n",
-    "    train = data.Dataset(train_examples, train_fields)\n",
-    "    test = data.Dataset(test_examples, test_fields)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 构建数据集"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25it [00:00, 7457.87it/s]\n",
-      "25it [00:00, 8979.84it/s]\n",
-      "100%|██████████| 33/33 [00:00<00:00, 31307.86it/s]"
+      "25it [00:00, 4646.91it/s]\n",
+      "25it [00:00, 8605.47it/s]\n",
+      "100%|██████████| 33/33 [00:00<00:00, 21766.32it/s]"
      ]
     },
     {
@@ -307,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -326,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['explanation', 'the', 'edits', 'made', 'under', 'my', 'hardcore', 'metallica', 'fan', 'were', 'vandalisms,', 'just', 'on', 'gas', 'after', 'at', 'york', 'dolls', 'fac.', 'and', \"don't\", 'remove', 'template', 'from', 'the', 'since', \"i'm\"]\n"
+      "['explanation', 'made', 'under', 'my', 'username', 'were', 'reverted?', 'they', \"weren't\", 'just', 'closure', 'on', 'some', 'gas', 'i', 'voted', 'at', 'new', 'fac.', 'and', 'please', \"don't\", 'template', 'from', 'talk', 'since', \"i'm\", 'retired', 'now.89.205.38.27']\n"
      ]
     }
    ],
@@ -350,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,25 +393,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('the', 62),\n",
-       " ('to', 33),\n",
-       " ('you', 27),\n",
-       " ('of', 24),\n",
-       " ('a', 24),\n",
+       "[('the', 55),\n",
+       " ('to', 34),\n",
+       " ('you', 23),\n",
        " ('and', 21),\n",
+       " ('a', 20),\n",
        " ('is', 19),\n",
-       " ('if', 18),\n",
-       " ('that', 17),\n",
-       " ('on', 16)]"
+       " ('of', 19),\n",
+       " ('that', 16),\n",
+       " ('i', 14),\n",
+       " ('in', 13)]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,20 +429,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torchtext.data import Iterator, BucketIterator\n",
+    "# 若只针对训练集构造迭代器\n",
+    "# train_iter = data.BucketIterator(dataset=train, batch_size=8, shuffle=True, sort_within_batch=False, repeat=False)\n",
+    "\n",
+    "# 同时对训练集和验证集进行迭代器的构建\n",
     "train_iter, val_iter = BucketIterator.splits(\n",
-    "        (train, valid), # we pass in the datasets we want the iterator to draw data from\n",
+    "        (train, valid), # 构建数据集所需的数据集\n",
     "        batch_sizes=(8, 8),\n",
-    "        device=-1, # if you want to use the GPU, specify the GPU number here\n",
+    "        device=-1, # 如果使用gpu，此处将-1更换为GPU的编号\n",
     "        sort_key=lambda x: len(x.comment_text), # the BucketIterator needs to be told what function it should use to group the data.\n",
     "        sort_within_batch=False,\n",
     "        repeat=False # we pass repeat=False because we want to wrap this Iterator layer.\n",
     ")\n",
+    "\n",
     "test_iter = Iterator(test, batch_size=8, device=-1, sort=False, sort_within_batch=False, repeat=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[torchtext.data.batch.Batch of size 8 from GRAND DATASET]\n",
+      "\t[.comment_text]:[torch.LongTensor of size 200x8]\n",
+      "\t[.toxic]:[torch.LongTensor of size 8]\n",
+      "torch.Size([200, 8]) torch.Size([8])\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 8 from GRAND DATASET]\n",
+      "\t[.comment_text]:[torch.LongTensor of size 200x8]\n",
+      "\t[.toxic]:[torch.LongTensor of size 8]\n",
+      "torch.Size([200, 8]) torch.Size([8])\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1 from GRAND DATASET]\n",
+      "\t[.comment_text]:[torch.LongTensor of size 200x1]\n",
+      "\t[.toxic]:[torch.LongTensor of size 1]\n",
+      "torch.Size([200, 1]) torch.Size([1])\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 8 from GRAND DATASET]\n",
+      "\t[.comment_text]:[torch.LongTensor of size 200x8]\n",
+      "\t[.toxic]:[torch.LongTensor of size 8]\n",
+      "torch.Size([200, 8]) torch.Size([8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, batch in enumerate(train_iter):\n",
+    "    print(batch)\n",
+    "    text, label = batch.comment_text, batch.toxic\n",
+    "    print(text.shape, label.shape)"
    ]
   },
   {
@@ -438,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,30 +556,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.7022, grad_fn=<NllLossBackward>)\n",
-      "tensor(0.0197, grad_fn=<NllLossBackward>)\n",
-      "tensor(0.0046, grad_fn=<NllLossBackward>)\n",
-      "tensor(0.0702, grad_fn=<NllLossBackward>)\n"
+      "tensor(0.6981, grad_fn=<NllLossBackward>)\n",
+      "tensor(1.1538, grad_fn=<NllLossBackward>)\n",
+      "tensor(0.4939, grad_fn=<NllLossBackward>)\n",
+      "tensor(0.0606, grad_fn=<NllLossBackward>)\n"
      ]
     }
    ],
    "source": [
     "for epoch, batch in enumerate(train_iter):\n",
     "    optimizer.zero_grad()\n",
-    "    start = time.time()\n",
-    "    # text = batch.text.permute(1, 0)\n",
     "    predicted = model(batch.comment_text)\n",
     "\n",
     "    loss = loss_funtion(predicted, batch.toxic)\n",
     "    loss.backward()\n",
-    "    # utils.clip_gradient(optimizer, opt.grad_clip)\n",
     "    optimizer.step()\n",
     "    print(loss)"
    ]
