--- a/Test_Dataset.ipynb
+++ b/Test_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "1  0000247867823ef7  == From RfC == \\n\\n The title is fine as it is..."
       ]
      },
-     "execution_count": 259,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25it [00:00, 4646.91it/s]\n",
-      "25it [00:00, 8605.47it/s]\n",
-      "100%|██████████| 33/33 [00:00<00:00, 21766.32it/s]"
+      "25it [00:00, 8599.82it/s]\n",
+      "25it [00:00, 9660.73it/s]\n",
+      "100%|██████████| 33/33 [00:00<00:00, 28926.23it/s]"
      ]
     },
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -343,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['explanation', 'made', 'under', 'my', 'username', 'were', 'reverted?', 'they', \"weren't\", 'just', 'closure', 'on', 'some', 'gas', 'i', 'voted', 'at', 'new', 'fac.', 'and', 'please', \"don't\", 'template', 'from', 'talk', 'since', \"i'm\", 'retired', 'now.89.205.38.27']\n"
+      "['i', 'at', 'explanation', 'dolls', 'just', 'talk', 'new', 'since', 'closure', 'reverted?', 'retired', 'fac.', 'after', 'york', 'now.89.205.38.27', 'they', 'gas', 'edits', 'hardcore', 'fan', 'template', 'from', 'username', 'were', \"weren't\", 'please', 'the', 'my', 'page', \"don't\", 'the', 'remove', 'on', 'vandalisms,', 'and', 'made', 'why', 'metallica', 'some', \"i'm\", 'under', 'voted', 'the']\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,25 +393,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('the', 55),\n",
-       " ('to', 34),\n",
-       " ('you', 23),\n",
-       " ('and', 21),\n",
-       " ('a', 20),\n",
+       "[('the', 65),\n",
+       " ('to', 35),\n",
+       " ('you', 29),\n",
+       " ('of', 26),\n",
+       " ('and', 24),\n",
        " ('is', 19),\n",
-       " ('of', 19),\n",
-       " ('that', 16),\n",
-       " ('i', 14),\n",
-       " ('in', 13)]"
+       " ('that', 19),\n",
+       " ('a', 19),\n",
+       " ('i', 18),\n",
+       " ('this', 16)]"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,17 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6981, grad_fn=<NllLossBackward>)\n",
-      "tensor(1.1538, grad_fn=<NllLossBackward>)\n",
-      "tensor(0.4939, grad_fn=<NllLossBackward>)\n",
-      "tensor(0.0606, grad_fn=<NllLossBackward>)\n"
+      "tensor(0.7700, grad_fn=<NllLossBackward>)\n",
+      "tensor(0.0174, grad_fn=<NllLossBackward>)\n",
+      "tensor(0.7216, grad_fn=<NllLossBackward>)\n",
+      "tensor(0.7747, grad_fn=<NllLossBackward>)\n"
      ]
     }
    ],
@@ -580,6 +580,13 @@
     "    optimizer.step()\n",
     "    print(loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
